# exponential-family-discriminant-analysis

./: .gitignore  README.md  config.json  custom.py  distributions.py  efda.py  evaluator.py  helpers.py  models.py  pyproject.toml  requirements.txt  weibull-demo.py
blog/: weibull-demo.py
efda_test.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
evals/: experiments
experiments/: calibration.py  efficiency.py
lean/: EFDAChallenge.lean  README.md
lean/aristotle/: ARISTOTLE_SUMMARY_a161d13f-f47a-4063-8bbc-ebf3d0246696.md  EFDAChallenge.lean
lean/gauss/: gauss.lean
lean/opengauss-results/: EFDAChallenge-proved.lean  lake-manifest.json  lakefile.lean
lean/verification/: verify.py
results/: benchmark.json  efficiency.json  imbalance.json  multiclass.json  sample_size.json  unknown_k.json
