[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "efda"
version = "0.1.0"
description = "Exponential Family Discriminant Analysis"
authors = [
    {name = "Anish Lakkapragada", email = "anish.lakkapragada@yale.edu"},
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib>=3.7.2",
    "axiom-axle>=1.0.2",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
